[gd_scene load_steps=3 format=3 uid="uid://byqbg4pnkcdel"]

[ext_resource type="Script" uid="uid://dpn6xghsn6yyy" path="res://scripts/old_archive_menu.gd" id="1_mt4f1"]
[ext_resource type="Script" uid="uid://ufeeo6ebhf0h" path="res://scenes/context_menu/misc_context.gd" id="2_o1kfh"]

[node name="ArchiveMenu" type="Window"]
title = "Archive"
initial_position = 1
size = Vector2i(700, 500)
script = ExtResource("1_mt4f1")

[node name="Backgroud" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.486275, 0.184314, 0.313726, 1)

[node name="TabContainer" type="TabContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -175.0
offset_right = 175.0
offset_bottom = 450.0
grow_horizontal = 2
tab_alignment = 1
current_tab = 0
clip_tabs = false

[node name="Characters" type="TabBar" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Characters"]
custom_minimum_size = Vector2(526, 419)
layout_mode = 1
offset_left = 30.0
offset_right = 556.0
offset_bottom = 419.0
metadata/_edit_use_anchors_ = true

[node name="Scroll" type="VBoxContainer" parent="TabContainer/Characters/ScrollContainer"]
layout_mode = 2

[node name="Stages" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Screenpacks" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Addons" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="Musics" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="Settings" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 5

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Settings"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -28.5
offset_right = 28.5
offset_bottom = 40.0
grow_horizontal = 2

[node name="LoadArchive" type="Button" parent="TabContainer/Settings/VBoxContainer"]
layout_mode = 2
text = "Load archive folder
"

[node name="FileDialog" type="FileDialog" parent="TabContainer/Settings/VBoxContainer/LoadArchive"]
title = "Open a Directory"
initial_position = 1
size = Vector2i(500, 500)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="OpenFolder" type="Button" parent="TabContainer/Settings/VBoxContainer"]
layout_mode = 2
text = "Open selected archive folder"

[node name="SaveAutoLoadFolder" type="Button" parent="TabContainer/Settings/VBoxContainer"]
layout_mode = 2
text = "Save auto-load archive folder"

[node name="AutoLoadFolder" type="CheckBox" parent="TabContainer/Settings/VBoxContainer"]
layout_mode = 2
text = "Auto load archive folder"

[node name="selectStartLine" type="HBoxContainer" parent="TabContainer/Settings/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Settings/VBoxContainer/selectStartLine"]
layout_mode = 2
text = "select.def start line"

[node name="LineEdit" type="LineEdit" parent="TabContainer/Settings/VBoxContainer/selectStartLine"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 10
placeholder_text = "Insert number"

[node name="MiscContext" type="PopupMenu" parent="."]
size = Vector2i(191, 100)
item_count = 1
item_0/text = "Open character folder"
script = ExtResource("2_o1kfh")

[connection signal="pressed" from="TabContainer/Settings/VBoxContainer/LoadArchive" to="." method="_on_load_archive_pressed"]
[connection signal="dir_selected" from="TabContainer/Settings/VBoxContainer/LoadArchive/FileDialog" to="." method="_on_file_dialog_dir_selected"]
[connection signal="pressed" from="TabContainer/Settings/VBoxContainer/OpenFolder" to="." method="_on_open_folder_pressed"]
[connection signal="pressed" from="TabContainer/Settings/VBoxContainer/SaveAutoLoadFolder" to="." method="_on_save_auto_load_folder_pressed"]
[connection signal="text_submitted" from="TabContainer/Settings/VBoxContainer/selectStartLine/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="id_pressed" from="MiscContext" to="." method="_on_misc_context_id_pressed"]
